new design updates

--- a/app/views/home/basinda_benvarim.html.erb
+++ b/app/views/home/basinda_benvarim.html.erb
@@ -5,7 +5,40 @@
   <div class="p-content size3of4 lastUnit">
     <div class="p-inner">
       <div class="p-summary">
+        <h1>Basında BenVarım</h1>
+
+
         <p>BenVarım platformu, medya kitine buradan ulaşabilirsiniz. BenVarım platformu, medya destekçiler etc.</p>
+
+
+
+        <%=render :partial => "layouts/rows",
+          :locals => {
+            :show_edit_link => false,
+            :projects => @top_projects,
+            :hide_organization_link => true
+          }%>
+
+
+
+
+
+
+        <ul>
+          <li>
+            <h3><a href="http://sosyalmedya.co/benvarim-com-nesin-matematik-koyu/" target="_blank"></a></h3>
+            <p>Platformun verimliliğinin sosyal medyanın yoğun ve doğru kullanımı ile ne kadar arttırabileceğinin kanıtı olarak Nesin Vakfı Matematik Köyü’nün hikayesini paylaşalım sizinle.</p>
+
+
+          </li>
+          <li><a href="" target="_blank"></a></li>
+          <li><a href="" target="_blank"></a></li>
+          <li><a href="" target="_blank"></a></li>
+          <li><a href="" target="_blank"></a></li>
+
+
+        </ul>
+
       </div>
 
       <div class="p-details">
