--- a/app/views/home/hakkimizda.html.erb
+++ b/app/views/home/hakkimizda.html.erb
@@ -5,6 +5,7 @@
   <div class="p-content size3of4 lastUnit">
     <div class="p-inner">
       <div class="p-summary">
+        <h3>Hakkımızda</h3>
         <p>BenVarım platformu, Dünya’da nice örneği olan İnternet’ten bağış toplama (online fundraising) sisteminin Türkiye’deki ilk ve tek örneği olarak San Francisco'da ve İstanbul'da yaşayan, dört Türk girişimcisi tarafından 2011 yılında kurulmuştur.</p>
 
         <p>Kurucular, birer aktivist, gönüllü ve sivil toplum yöneticisi olarak emek verdikleri Türkiye’ye verimli bir bağış platformu kazandırmak için biraraya geldiler. Gönüllülerin de katılımıyla her geçen gün büyüyen BenVarım ailesi, sivil toplum kuruluşlarına teknik altyapı sağlayarak, kurumların maddi ve manevi olarak güçlenmesi için çalışmalarını sürdürmektedir.</p>
