--- a/app/views/home/includes/_founders.erb
+++ b/app/views/home/includes/_founders.erb
@@ -16,7 +16,9 @@
     <div class="pr-details">
       <div class="p-name">Levent Baş</div>
       <div class="p-title">Proje Direktörü</div>
-      <p>Benvarim.com projesinin ekip liderliğini yürüten Levent Baş, profosyonel olarak İstanbul, San Francisco ve Singapur'da güneş enerjisi sektöründe çalışmalar yapmaktadır. Okul yılları ve sonrasında, çeşitli sivil toplum organizasyonlarında gönüllü ve yönetici olarak çalışan Levent'in, başarılı girişimleri arasında Boğaziçi Üniversitesi'nin ilk güneş enerjili aracının üretimi ve Türkiye'de ulusal çapta üniversite yelkenciliği sistemi ile yelken eğitim sisteminin kurulması vardır. Levent'in hem Türkiye'de, hem ABD'de sosyal projelerdeki çalışmaları, Benvarim.com projesinin çıkış noktası olmuştur. Kendisi, Boğaziçi Üniversitesi Makina Mühendisliği mezunu ve INSEAD MBA öğrencisidir.</p>
+      <p>Benvarim.com projesinin ekip liderliğini yürüten Levent Baş, profosyonel olarak İstanbul, San Francisco ve Singapur'da güneş enerjisi sektöründe çalışmalar yapmaktadır.</p>
+      <p>Okul yılları ve sonrasında, çeşitli sivil toplum organizasyonlarında gönüllü ve yönetici olarak çalışan Levent'in, başarılı girişimleri arasında Boğaziçi Üniversitesi'nin ilk güneş enerjili aracının üretimi ve Türkiye'de ulusal çapta üniversite yelkenciliği sistemi ile yelken eğitim sisteminin kurulması vardır.</p>
+      <p>Levent'in hem Türkiye'de, hem ABD'de sosyal projelerdeki çalışmaları, Benvarim.com projesinin çıkış noktası olmuştur. Kendisi, Boğaziçi Üniversitesi Makina Mühendisliği mezunu ve INSEAD MBA öğrencisidir.</p>
       <div class="p-other">
         <a href="http://www.linkedin.com/in/leventbas" target="_blank" title="LinkedIn profilini görüntüle">
           <img src="/images/social_media_mini_icons/png/linkedin.png" />
@@ -48,7 +50,9 @@
     <div class="pr-details">
       <div class="p-name">Yiğit Boyar</div>
       <div class="p-title">Teknoloji Direktörü</div>
-      <p>Benvarim.com projesinin teknik liderliğini yürüten Yiğit Boyar, ABD Silikon Vadisi'nde başarılı bir sosyal ağ startupında çalışmakta ve bu alanda 5 yılı aşkın bir tecrübeye sahip. Lise eğitimini Ankara Fen Lisesi'nde tamamlayan Yiğit, bu süreçte bilgisayar biliminde ciddi çalışmalar yapmış, ulusal ve uluslararası alanlarda çeşitli ödüller kazanmıştır. ODTÜ Bilgisayar Mühendisliği'ne başladıktan sonra web teknolojilerine yoğunlaşan Yiğit, ODTÜ Bilgisayar Topluluğu bünyesinde bir çok seminer vermiştir. 2006-2008 yılları arasında ODTÜ Verimlilik Topluluğu'nun yonetim kurulunda yer alan Yiğit, STK'ların problemlerinin tesbit ve çözümune odaklı, ulusal bir vaka analizi yarismasi olan Çözum Sende (cozumsende.org)'nin yaratıcılarından.</p>
+      <p>Benvarim.com projesinin teknik liderliğini yürüten Yiğit Boyar, ABD Silikon Vadisi'nde başarılı bir sosyal ağ startupında çalışmaktadır ve bu alanda 5 yılı aşkın bir tecrübeye sahiptir.</p>
+      <p>Lise eğitimini Ankara Fen Lisesi'nde tamamlayan Yiğit, bu süreçte bilgisayar biliminde ciddi çalışmalar yapmış, ulusal ve uluslararası alanlarda çeşitli ödüller kazanmıştır. ODTÜ Bilgisayar Mühendisliği'ne başladıktan sonra web teknolojilerine yoğunlaşan Yiğit, ODTÜ Bilgisayar Topluluğu bünyesinde bir çok seminer vermiştir. 2006-2008 yılları arasında ODTÜ Verimlilik Topluluğu'nun yönetim kurulunda yer almaktadır.</p>
+        <p>Aynı zamanda, STK'ların problemlerinin tespit ve çözümüne odaklı, ulusal bir vaka analizi yarışması olan <a href="http://cozumsende.com" target="_blank">Çözüm Sende</a>'nin yaratıcılarındandır.</p>
       <div class="p-other">
         <a href="http://www.linkedin.com/in/yigitboyar" target="_blank" title="LinkedIn profilini görüntüle">
           <img src="/images/social_media_mini_icons/png/linkedin.png" />
@@ -83,7 +87,9 @@
     <div class="pr-details">
       <div class="p-name">Gerçek Karakuş</div>
       <div class="p-title">Ürün Geliştirme Direktörü</div>
-      <p>1984 yılında Malatya’da doğdu. Galatasaray Lisesi’nden başarıyla mezun olduktan sonra Boğaziçi Üniversitesi ve New York Devlet Üniversitesi Bilişim Sistemleri Mühendisliği çift diploma programını yüksek derece ile bitirdi. Yaşamına Silikon Vadisi’nde devam etmekte ve <a href="http://www.redbeacon.com" target="_blank">Redbeacon</a>’da UX mühendisi olarak çalışmaktadır. <a href="http://www.gercekkarakus.com" target="_blank">http://www.gercekkarakus.com</a></p>
+      <p>1984 yılında Malatya’da doğdu. Galatasaray Lisesi’nden başarıyla mezun olduktan sonra Boğaziçi Üniversitesi ve New York Devlet Üniversitesi Bilişim Sistemleri Mühendisliği çift diploma programını yüksek derece ile bitirdi.</p>
+      <p>Lise yıllarında 2 kez <a href="http://www.hnmun.org/" target="_blank">Uluslararası Harvard Model Birleşmiş Milletler Konferansı</a>'nda delege olarak yer aldı ve Avrupa Birliği tarafından ödüllendirilen <a href="http://www.gsl.gsu.edu.tr/history/" target="_blank">"Farklı tarihlerden ortak geleceğimize"</a> adlı projenin yöneticiliğini üstlendi. 2008 yılından beri Amerika'daki <a href="http://www.gsusaalumni.org/" target="_blank">Galatasaray Lisesi Mezunları Derneği</a>'nde Teknoloji Direktörü olarak görev yapmaktadır.</p>
+        <p>Yaşamına Silikon Vadisi’nde devam etmekte ve <a href="http://www.redbeacon.com" target="_blank">Redbeacon</a>’da kullanılabilirlik ve tasarım (UX) mühendisi olarak çalışmaktadır. <a href="http://www.gercekkarakus.com" target="_blank">http://www.gercekkarakus.com</a></p>
       <div class="p-other">
         <a href="http://www.linkedin.com/in/gercekkarakus" target="_blank" title="LinkedIn profilini görüntüle">
           <img src="/images/social_media_mini_icons/png/linkedin.png" />
