--- a/app/views/home/sik_sorulan_sorular.erb
+++ b/app/views/home/sik_sorulan_sorular.erb
@@ -5,6 +5,8 @@
   <div class="p-content size3of4 lastUnit">
     <div class="p-inner">
       <div class="p-summary">
+        <h3>Sık Sorulan Sorular</h3>
+        <p>Merak ettiğiniz her türlü soruyu bize sorabilirsiniz. Merak ettiğiniz her türlü soruyu bize sorabilirsiniz. Merak ettiğiniz her türlü soruyu bize sorabilirsiniz. Merak ettiğiniz her türlü soruyu bize sorabilirsiniz. Merak ettiğiniz her türlü soruyu bize sorabilirsiniz.</p>
       </div>
 
       <div class="p-details">
