--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -142,9 +142,9 @@
           <div class="size1of2 lastUnit">
             <ul>
               <li><%=link_to "İletişim", :new_contact_form %></li>
-              <li>Blog</li>
+              <li><a href="http://blog.benvarim.com/">Blog</a></li>
               <li>Basın Bültenleri</li>
-              <li><a href="#" class="">Yeni Kurum Kaydı</a></li>
+              <li><%=link_to "Yeni Kurum Kaydı", :new_organization %></li>
             </ul>
           </div>
         </div>
