--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1385,7 +1385,8 @@ blockquote span.quotation{
   	cursor: pointer;
    }
 
-  .button:hover	{ background-color: #111; color: #fff !important; 	border-bottom: 1px solid rgba(0,0,0,0.25) !important; text-decoration: none !important;}
+  .button:hover	{
+    background-color: #111; color: #fff !important; 	border-bottom: 1px solid rgba(0,0,0,0.25) !important; text-decoration: none !important;}
   .button:active { top: 1px; color: #FFF !important; }
   .small.button, .small.button:visited { font-size: 11px}
   .button, .button:visited,
@@ -1418,13 +1419,13 @@ blockquote span.quotation{
 	.blue.button, .blue.button:visited		    { background-color: #2981e4; }
 	.blue.button:hover							{ background-color: #2575cf; }
 	.yellow.button, .yellow.button:visited		{
-	  background-color: #ffb515;
+	  background-color: #fc9200;
 	  background-image: url(images/button_yellow.png) repeat-x;
 	  border: 1px solid #ffa03c;
     text-shadow: 0 -1px 1px #FF9900;
   	-moz-box-shadow: 0 1px 1px rgba(160,90,20,0.6);
   	-webkit-box-shadow: 0 1px 1px rgba(160,90,20,0.6); }
-	.yellow.button:hover { background-color: #fc9200; }
+	.yellow.button:hover { background-color: #ffb515; }
 
 	/* more classes */
 	.right.button{ float: right !important;}
@@ -1665,6 +1666,11 @@ blockquote span.quotation{
         background: -moz-linear-gradient(top, #eeeeee 0%, #E2E2E2 50%, #eeeeee 100%); /* firefox */
         background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#eeeeee), color-stop(50%,#E2E2E2), color-stop(100%,#eeeeee)); /* webkit */
         filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#eeeeee',GradientType=0 ); /* ie */
+
+         -moz-box-shadow: 0 0 5px #777 inset;
+          -webkit-box-shadow: 0 0 5px #777 inset;
+          box-shadow: 0 0 5px #777 inset;
+
     }
 
     #list-pages .progress-bar{
@@ -1672,7 +1678,7 @@ blockquote span.quotation{
     }
 
     .pb-value{
-        background: url('images/profile-bar-green.jpg') 0 0 repeat-y;
+        background: url('images/profile_bar_2.jpg') 0 0 repeat-y;
         height: 100%;
      }
 
@@ -1691,6 +1697,7 @@ blockquote span.quotation{
             rgba(255,255,255, 0) 56%,
             rgba(245,245,245, .3) 100%
         );
+
          height: 100%;
     }
 
@@ -1722,7 +1729,7 @@ blockquote span.quotation{
     */
     .widget{
       width:100%;
-      margin-bottom:20px;
+      margin-bottom: 30px;
 
       /* Shadow */
       -moz-box-shadow: 0 0 5px 2px #2b4b6c;
@@ -1926,6 +1933,11 @@ blockquote span.quotation{
 /*************************************************************************************
 ** NEDIR
 *************************************************************************************/
+#i-home-index #content,
+.c-nedir #content{
+  margin-top: 10px;
+}
+
 #page-nedir{
     background: #2B4B6C url('../images/nedir.png') 20px center no-repeat;
     height: 250px;
@@ -1935,6 +1947,21 @@ blockquote span.quotation{
 .nedir-item{
     margin: 30px 0 40px;
 }
+
+.c-home .widget-kurum,
+.c-home .w-top-fundraisers {
+  width: 465px;
+}
+
+.c-home .widget-kurum{
+  margin-right: 20px;
+}
+
+.w-top-fundraisers {
+  float: right;
+}
+
+
 
 
 /*************************************************************************************
@@ -1949,6 +1976,13 @@ blockquote span.quotation{
 }
 
 
+
+
+
+#i-home-sik_sorulan_sorular .ui-tabs-panel{
+  border:none;
+  padding: 20px 0 0;
+}
 
 
 /*************************************************************************************
@@ -2239,6 +2273,13 @@ blockquote span.quotation{
 /*************************************************************************************
 ** BAGIS ODEME SAYFASI - http://0.0.0.0:3000/sayfa/3/bagis
 *************************************************************************************/
+
+/*
+* HACKS
+*/
+.scribd_iframe_embed{
+  height: 600px !important;
+}
 
 /*
 ** FACEBOX HACKS
