new design updates

--- a/app/views/home/hakkimizda.html.erb
+++ b/app/views/home/hakkimizda.html.erb
@@ -13,6 +13,8 @@
 
       <div class="p-details">
         <%= render 'home/includes/founders'%>
+        <%= render 'home/includes/volunteers'%>
+
       </div>
     </div>
   </div><!-- p-content -->
