--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -63,6 +63,7 @@
         <div id="header-logo">
           <%=link_to "benvarim.com", :root%>
         </div>
+        <div id="partner-logo"></div>
         <div id="site-nav">
           <ul class="clearfix">
             <li><%=link_to "Nedir?", :root, :class => "rc-top #{print_if_selected_tab :home, :index}", :id => "nav-anasayfa"%></li>
