--- a/app/views/home/includes/_how_it_works.erb
+++ b/app/views/home/includes/_how_it_works.erb
@@ -17,3 +17,40 @@
     }
   %>
 </p>
+
+
+
+<div id="main-content">
+  <div class="widget widget-light">
+    <div class="w-inner">
+      <div class="w-title">Nedir?</div>
+
+
+        <p>BenVarım, sosyal sorumluluk projeleri için bağış ve tanıtım platformudur.</p>
+
+        <p>Gönüllüsü olduğunuz vakıf veya derneğin, bağış kampanyasına katılarak kendinize bir web sayfası yaratabilirsiniz.  BenVarım ile, sosyal ağınızda bulunan arkadaş, akraba ve diğer gönüllülere kolayca ulaşacak ve daha fazla bağış toplanmasına aracı olacaksınız.</p>
+
+        <p>BenVarım, vakıf ve derneklerin seslerini daha geniş kitlelere ulaştırır.</p>
+
+        <p>BenVarım’ı iki şekilde kullanabilirsiniz:</p>
+
+        <div class="nedir-item">
+        <h3>1) GÖNÜLLÜ</h3>
+        <p>Hemen sayfanızı yaratın ve gönülllüsü olduğunuz sivil toplum kuruluşu projelerini, facebook, twitter, eposta ve blog’unuz ile sosyal ağınıza duyurun.</p>
+        <%=render :partial => "layouts/quickstart_widget",
+        :locals => {
+          :available_organizations => @available_organizations
+        }
+        %>
+        </div>
+
+        <div class="nedir-item">
+        <h3>2)	VAKIF veya DERNEK</h3>
+        <p>BenVarım’da kullanıcı adınızı yaratın ve proje ile kampanyalarınızı kolayca internet ortamına taşıyın. Gönüllülerinizin sosyal ağlarına kolayca ulaşarak hızlıca bağış toplamaya başlayın.</p>
+        <p><%=link_to "Yeni Vakıf ve Dernek Kaydı", :new_organization, :class => "button large green button-primary no-margin"%>
+        </p>
+        </div>
+
+      </div>
+    </div>
+</div><!-- end of #main-content -->
