--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -28,7 +28,7 @@
 
 
       <div class="fullcontent-right">
-        <div class="comment-bubble rc">
+        <div class="comment-bubble rc clearfix">
           <h1><%= @page.title %></h1>
           <h6><%= @page.user.name%></h6>
 <div id="fb-root"></div>
