--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -854,7 +854,8 @@ p{
 */
 #content{
   position:relative;
-  margin-top: 30px;
+  margin-top: 10px;
+  padding-top: 20px;
 }
 
 #featured-content{
@@ -1617,10 +1618,21 @@ blockquote span.quotation{
       background: #EEE;
     }
 
+
+    .comment-arrow{
+      position:absolute;
+      top:20px;
+      left:-21px;
+      background:url('images/comment-arrow.png') no-repeat;
+      width:21px;
+      height:25px;
+    }
+
+
+
     .comment-bubble h1{
       line-height: 1.3;
       font-size: 24px;
-      margin-bottom: 15px !important;
       text-shadow: 0 2px 0 #FFF;
     }
 
@@ -1631,13 +1643,26 @@ blockquote span.quotation{
       font-size: 18px;
     }
 
-    .comment-arrow{
-      position:absolute;
-      top:20px;
-      left:-21px;
-      background:url('images/comment-arrow.png') no-repeat;
-      width:21px;
-      height:25px;
+    .comment-bubble h6,
+    .share-options {
+      margin-top: 15px;
+      float: left;
+    }
+
+    .share-options {
+      float: right;
+    }
+
+    .share-options ul{
+     list-style: none;
+    }
+
+    .share-options li {
+     float: left;
+     margin-left: 10px;
+     height: 20px;
+     line-height: 20px;
+     font-size: 12px;
     }
 
 
@@ -1935,13 +1960,14 @@ blockquote span.quotation{
 *************************************************************************************/
 #i-home-index #content,
 .c-nedir #content{
-  margin-top: 10px;
+  padding-top:5px;
+  margin-top: 0;
 }
 
 #page-nedir{
     background: #2B4B6C url('../images/nedir.png') 20px center no-repeat;
     height: 250px;
-    padding: 20px 0;
+    padding: 30px 0;
 }
 
 .nedir-item{
@@ -1951,6 +1977,7 @@ blockquote span.quotation{
 .c-home .widget-kurum,
 .c-home .w-top-fundraisers {
   width: 465px;
+  margin-bottom:0;
 }
 
 .c-home .widget-kurum{
@@ -2146,23 +2173,6 @@ blockquote span.quotation{
 .widget-aktif-bagis p{ margin-bottom:5px; }
 
 
-.share-options {
- position:absolute;
- right:5px;
- bottom:10px;
-}
-
-.share-options ul{
- list-style: none;
-}
-
-.share-options li {
- float: left;
- margin-left: 10px;
- height: 20px;
- line-height: 20px;
- font-size: 12px;
-}
 
 .description{
  margin-bottom: 20px;
@@ -2184,6 +2194,32 @@ blockquote span.quotation{
 /*************************************************************************************
 ** BAGIS SAYFASI
 *************************************************************************************/
+
+/*
+ * Custom Organizations
+ */
+
+/* UNICEF */
+.c-org-16 #content{
+  background: url('../images/body-logo-unicef.png') no-repeat top left;
+}
+
+.c-org-16 #partner-logo{
+  background: url('../images/header-logo-unicef.png') no-repeat 10px 0;
+  width: 186px;
+  height: 60px;
+  float: left;
+  margin-top: 25px;
+  margin-left: 15px;
+  padding-left: 0;
+  border-left: 1px solid #DDD;
+}
+
+
+
+
+
+
 .related-organization {
     margin-bottom: 20px;
 }
