--- a/app/views/admin/_impersonate_form.erb
+++ b/app/views/admin/_impersonate_form.erb
@@ -1,5 +1,44 @@
-<%= form_tag(admin_impersonate_path, :method => "post") do %>
-  <%= label_tag(:username, "Kullanıcı adı veya email:") %>
-  <%= text_field_tag(:username) %>
-  <%= submit_tag("Giriş yap") %>
+<div class="widget widget-light widget-kurum" id="list-pages">
+  <div class="w-inner clearfix">
+    <div class="w-content search-page">
+      <form id="search_form">
+        <input type="text"  name="k" id="search_query" value="<%=@username%>">
+      </form>
+      <hr/>
+      <div id="facet_renderer" class="search-div">
+      </div>
+      <div id="search_renderer" class="search-div">
+      </div>
+    </div>
+  </div>
+</div>
+<style>
+.search-page .search-div {
+  float:left;
+  padding: 20px;
+}
+</style>
+
+
+<% captured = capture do %>
+<script>
+$(document).ready(function(){
+    $("#search_form").bvSearchAutocomplete({
+      renderer : $("#search_renderer"),
+      format : function(item) {
+        return $.tmpl("<p><a href='/kertenkele/impersonate/${docid}'><img src='${logo}'> ${human_readable_name}</a><br/>${description}</p><hr/>", item);
+      },
+      facetRenderer : $("#facet_renderer"),
+      facetFormat : function(facet) {
+
+      },
+      searchRenderer : $("search_renderer"),
+
+      urlPrefix : "/kertenkele/impersonate/"
+
+
+    });
+});
+</script>
 <% end %>
+<%render_at_the_end captured%>
