--- a/app/views/home/nasil_calisir.html.erb
+++ b/app/views/home/nasil_calisir.html.erb
@@ -10,9 +10,15 @@
   <div class="p-content size3of4 lastUnit">
     <div class="p-inner">
       <div class="p-summary">
-        <p>BenVarım platformu, Dünya’da nice örneği olan İnternet’ten bağış toplama (online fundraising) sisteminin Türkiye’deki ilk ve tek örneği olarak San Francisco'da ve İstanbul'da yaşayan, dört Türk girişimcisi tarafından 2011 yılında kurulmuştur.</p>
+        <h3>Nasıl Çalışır?</h3>
 
-        <p>Kurucular, birer aktivist, gönüllü ve sivil toplum yöneticisi olarak emek verdikleri Türkiye’ye verimli bir bağış platformu kazandırmak için biraraya geldiler. Gönüllülerin de katılımıyla her geçen gün büyüyen BenVarım ailesi, sivil toplum kuruluşlarına teknik altyapı sağlayarak, kurumların maddi ve manevi olarak güçlenmesi için çalışmalarını sürdürmektedir.</p>
+        <p>BenVarım, sosyal sorumluluk projeleri için bağış ve tanıtım platformudur.</p>
+
+        <p>Gönüllüsü olduğunuz vakıf veya derneğin, bağış kampanyasına katılarak kendinize bir web sayfası yaratabilirsiniz.  BenVarım ile, sosyal ağınızda bulunan arkadaş, akraba ve diğer gönüllülere kolayca ulaşacak ve daha fazla bağış toplanmasına aracı olacaksınız.</p>
+
+        <p>BenVarım, vakıf ve derneklerin seslerini daha geniş kitlelere ulaştırır.</p>
+
+        <p>BenVarım’ı iki şekilde kullanabilirsiniz:</p>
       </div>
 
       <div class="p-details">
