--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -70,7 +70,7 @@
             <li>
               <%=link_to "Nasıl Çalışır?", :nasil_calisir, :class => "rc-top #{print_if_selected_tab :home, :nasil_calisir}", :id => "nav-nasil"%>
             </li>
-            <li><a href="http://blog.benvarim.com/" class="rc-top">Blog</a></li>
+            <li><a href="http://benvarimplatformu.wordpress.com/" target="_blank" class="rc-top">Blog</a></li>
             <li>
               <%=link_to "Hakkımızda", :hakkimizda, :class => "rc-top #{print_if_selected_tab :home, :hakkimizda}", :id => "nav-hakkimizda"%>
             </li>
