--- a/app/views/home/includes/_nedir.html.erb
+++ b/app/views/home/includes/_nedir.html.erb
@@ -34,9 +34,13 @@
       <div class="w-inner">
         <div class="w-title">Destekleyebileceğiniz Kurumlar</div>
         <a href="http://benvarim.com/kurum/unicef-turkiye-milli-komitesi" id="fc-unicef" title="UNICEF Türkiye Milli Komitesi">UNICEF Türkiye Milli Komitesi</a>
-        <a href="http://benvarim.com/kurum/nesin-vakfi" id="fc-nesin" title="Nesin Vakfı">Nesin Vakfı</a>
-        <a href="http://benvarim.com/kurum/ormana-kalkinma-ve-yardimlasma-vakfi" id="fc-ormana" title="Ormana Vakfı">Ormana Vakfı</a>
+        <a href="http://benvarim.com/kurum//turkiye-egitim-gonulluleri-vakfi-tegv" id="fc-tegv" title="Türk Eğitim Gönüllüleri Vakfı">Türk Eğitim Gönüllüleri Vakfı</a>
+        <a href="http://benvarim.com/kurum/bugday-ekolojik-yasami-destekleme-dernegi" id="fc-bugday" title="Buğday Ekolojik Yaşamı Destekleme Derneği">Buğday Ekolojik Yaşamı Destekleme Derneği</a>
+
+
         <!--
+        <a href="http://benvarim.com/kurum/ormana-kalkinma-ve-yardimlasma-vakfi" id="fc-ormana" title="Ormana Vakfı">Ormana Vakfı</a>
+        <a href="http://benvarim.com/kurum/nesin-vakfi" id="fc-nesin" title="Nesin Vakfı">Nesin Vakfı</a>
         <a href="http://benvarim.com/kurum/cagdas-yasami-destekleme-dernegi" id="fc-cydd" class="fc-default" title="Çağdaş Yaşamı Destekleme Derneği">Çağdaş Yaşamı Destekleme Derneği</a>
         -->
         <a href="http://benvarim.com/kurum/turkish-educational-foundation-abd" id="fc-tef" class="fc-default" title="Turkish Educational Foundation">Turkish Educational Foundation</a>
