updates bagis sayfasi

--- a/app/views/home/includes/_founders.erb
+++ b/app/views/home/includes/_founders.erb
@@ -87,8 +87,8 @@
     <div class="pr-details">
       <div class="p-name">Gerçek Karakuş</div>
       <div class="p-title">Ürün Geliştirme Direktörü</div>
-      <p>1984 yılında Malatya’da doğdu. Galatasaray Lisesi’nden başarıyla mezun olduktan sonra Boğaziçi Üniversitesi ve New York Devlet Üniversitesi Bilişim Sistemleri Mühendisliği çift diploma programını yüksek derece ile bitirdi.</p>
-      <p>Lise yıllarında 2 kez <a href="http://www.hnmun.org/" target="_blank">Uluslararası Harvard Model Birleşmiş Milletler Konferansı</a>'nda delege olarak yer aldı ve Avrupa Birliği tarafından ödüllendirilen <a href="http://www.gsl.gsu.edu.tr/history/" target="_blank">"Farklı tarihlerden ortak geleceğimize"</a> adlı projenin yöneticiliğini üstlendi. 2008 yılından beri Amerika'daki <a href="http://www.gsusaalumni.org/" target="_blank">Galatasaray Lisesi Mezunları Derneği</a>'nde Teknoloji Direktörü olarak görev yapmaktadır.</p>
+      <p>1984 yılında Malatya’da doğdu. Galatasaray Lisesi’nden mezun olduktan sonra Boğaziçi Üniversitesi ve New York Devlet Üniversitesi Bilişim Sistemleri Mühendisliği çift diploma programını yüksek derece ile bitirdi.</p>
+      <p>Sosyal sorumluluk projelerin erken yaşlarda başlayan Gerçek, lise yıllarında 2 kez <a href="http://www.hnmun.org/" target="_blank">Uluslararası Harvard Model Birleşmiş Milletler Konferansı</a>'nda delege olarak yer aldı ve Avrupa Birliği tarafından ödüllendirilen <a href="http://www.gsl.gsu.edu.tr/history/" target="_blank">"Farklı tarihlerden ortak geleceğimize"</a> adlı projenin yöneticiliğini üstlendi. 2008 yılından beri Amerika'daki <a href="http://www.gsusaalumni.org/" target="_blank">Galatasaray Lisesi Mezunları Derneği</a>'nde Teknoloji Direktörü olarak görev yapmaktadır.</p>
         <p>Yaşamına Silikon Vadisi’nde devam etmekte ve <a href="http://www.redbeacon.com" target="_blank">Redbeacon</a>’da kullanılabilirlik ve tasarım (UX) mühendisi olarak çalışmaktadır. <a href="http://www.gercekkarakus.com" target="_blank">http://www.gercekkarakus.com</a></p>
       <div class="p-other">
         <a href="http://www.linkedin.com/in/gercekkarakus" target="_blank" title="LinkedIn profilini görüntüle">
