--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -33,19 +33,16 @@
           <h6><%= @page.user.name%></h6>
 <div id="fb-root"></div>
           <div class="share-options">
-
-            <ul>
-              <li style="width:60px"><g:plusone size="medium"></g:plusone></li>
+            <ul class="clearfix">
+              <li><a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-text="<%= @page.title %>" >Tweet</a></li>
+              <li style="margin-right: 10px"><span  class='st_email_hcount' displayText='Email'></span></li>
+              <li style="width:60px; margin-right: 10px"><g:plusone size="medium"></g:plusone></li>
               <% if @show_fb_like_send %>
                 <li><fb:like send="true" layout="button_count" width="165" show_faces="false" href="<%=url_for :only_path => false%>#fb"></fb:like></li>
               <% else %>
-                <li><span  class='st_email_hcount' displayText='Email'></span></li>
                 <li><a  target="_blank" name="fb_share" type="button_count">Facebook'ta Paylaş</a></li>
               <% end %>
-              <li><a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-text="<%= @page.title %>" >Tweet</a></li>
             </ul>
-
-
           </div>
         </div><!-- .comment-bubble -->
 
