--- a/public/stylesheets/page.css
+++ b/public/stylesheets/page.css
@@ -116,6 +116,7 @@
 .pfv-inner{
   border: 1px solid #DDD;
   background: #FFF;
+  background: url('../images/play.png') center center no-repeat;
   -webkit-border-radius: 5px;
   -khtml-border-radius: 5px;
   -moz-border-radius: 5px;
@@ -123,8 +124,9 @@
   -moz-box-shadow: 0 0px 5px #999 inset;
   -webkit-box-shadow:0 0px 5px #999 inset;
   box-shadow: 0 0px 5px #999 inset;
-
+  cursor: pointer;
   height: 330px;
+
 }
 
 /* right column contains desc */
