list pages update

--- a/app/views/home/includes/_nedir.html.erb
+++ b/app/views/home/includes/_nedir.html.erb
@@ -68,7 +68,8 @@
         <%=render :partial => "pages/list_pages_condensed",
           :locals => {
             :title => "En çok bağış toplayanlar",
-            :pages => @top_pages
+            :pages => @top_pages,
+            :link_to_pages => true
           }%>
         <% end %>
     </div>
