--- a/app/views/pages/_list_pages_condensed.erb
+++ b/app/views/pages/_list_pages_condensed.erb
@@ -19,11 +19,14 @@
       </div><!-- end of .row -->
     <% end %>
     <div class="row row-action">
-
-      <% if @organization %>
-        <%=link_to "Ben de bağış sayfası yaratmak istiyorum!", new_page_for_organization_path(@organization), :class => "green button large" %>
+      <% if defined?(link_to_pages) && link_to_pages == true%>
+        <%=link_to "Tüm Sayfalar", all_pages_path, :class => "green button large" %>
       <% else %>
-        <%=link_to "Gönüllü ol, bağış sayfası oluştur!", :new_page, :class => "button green large"%>
+        <% if @organization %>
+          <%=link_to "Ben de bağış sayfası yaratmak istiyorum!", new_page_for_organization_path(@organization), :class => "green button large" %>
+        <% else %>
+          <%=link_to "Gönüllü ol, bağış sayfası oluştur!", :new_page, :class => "button green large"%>
+        <% end %>
       <% end %>
     </div><!-- end of .row -->
     </div>
