--- a/app/views/pages/_list_pages.html.erb
+++ b/app/views/pages/_list_pages.html.erb
@@ -20,12 +20,12 @@
                 <div class="progress-bar rc clearfix">
                   <div class="pb-value rc" style="width: <%=page.collect_ratio_str%>%;">
                     <div class="pb-reflection rc"></div>
-                    <div class="pb-hedef">HEDEF: <b><%= page.goal %> TL</b></div>
+                    <div class="pb-hedef">HEDEF: <b><%= page.goal_str %> TL</b></div>
                     <div class="pb-toplanan">
                     <% if page.collected < 1 && page.active? %>
                       İlk bağış yapan sen ol!
                     <% else %>
-                      Toplanan: <b><%= page.collected %> TL</b>
+                      Toplanan: <b><%= page.collected_str %> TL</b>
                     <% end%>
 
                     </div>
