kurum listesi, full liste butonu

--- a/app/views/home/includes/_nedir.html.erb
+++ b/app/views/home/includes/_nedir.html.erb
@@ -60,7 +60,8 @@
         :locals => {
           :show_edit_link => false,
           :projects => @top_projects,
-          :hide_organization_link => true
+          :hide_organization_link => true,
+          :link_to_organizations => true
         }%>
     </div>
     <div class="size1of2 lastUnit">
