--- a/public/stylesheets/page.css
+++ b/public/stylesheets/page.css
@@ -41,6 +41,11 @@
     border-bottom: 2px solid #FFF;
 }
 
+.ie7 .p-nav li a,
+.ie8 .p-nav li a {
+  padding-top: 11px;
+}
+
 .p-nav li a:hover{
     opacity: .9;
     -ms-filter: "alpha(opacity=90)";
