fixes search results + hakkimizda

--- a/app/views/home/includes/_nedir.html.erb
+++ b/app/views/home/includes/_nedir.html.erb
@@ -31,7 +31,7 @@
 
   <div class="widget widget-light clearfix" id="featured-charities">
       <div class="w-inner">
-        <div class="w-title">Destekleyebileceğiniz Kurumlar</div>
+        <div class="w-title">Destekleyebileceğiniz kurumlar</div>
         <a href="http://benvarim.com/kurum/unicef-turkiye-milli-komitesi" id="fc-unicef" title="UNICEF Türkiye Milli Komitesi">UNICEF Türkiye Milli Komitesi</a>
         <a href="http://benvarim.com/kurum//turkiye-egitim-gonulluleri-vakfi-tegv" id="fc-tegv" title="Türk Eğitim Gönüllüleri Vakfı">Türk Eğitim Gönüllüleri Vakfı</a>
         <a href="http://benvarim.com/kurum/bugday-ekolojik-yasami-destekleme-dernegi" id="fc-bugday" title="Buğday Ekolojik Yaşamı Destekleme Derneği">Buğday Ekolojik Yaşamı Destekleme Derneği</a>
@@ -68,7 +68,7 @@
        <% if @top_pages.length > 0 %>
         <%=render :partial => "pages/list_pages_condensed",
           :locals => {
-            :title => "En çok bağış toplayanlar",
+            :title => "En aktif gönüllüler ve bağış sayfaları",
             :pages => @top_pages,
             :link_to_pages => true
           }%>
