--- a/app/views/home/includes/_volunteers.erb
+++ b/app/views/home/includes/_volunteers.erb
@@ -16,7 +16,7 @@
     <div class="pr-details">
       <div class="p-name">Onuralp Armağan</div>
       <div class="p-title">Mali Danışman</div>
-      <p>SMMM ünvanına sahip olan Onuralp Armağan, Benvarim.com projesini gönüllü olarak desteklemekte ve yine gönüllü olarak mali danışmanlığını yapmaktadır. Kendisi Boğaziçi Üniversitesi İşletme Bölümü'nde doktora çalışmalarını yürütmekte olup aynı kurum bünyesinde araştırma görevlisi olarak çalışmaktadır.</p>
+      <p>SMMM ünvanına sahip olan Onuralp Armağan, BenVarım projesini gönüllü olarak desteklemekte ve yine gönüllü olarak mali danışmanlığını yapmaktadır. Kendisi Boğaziçi Üniversitesi İşletme Bölümü'nde doktora çalışmalarını yürütmekte olup aynı kurum bünyesinde araştırma görevlisi olarak çalışmaktadır.</p>
       <p>Üniversite dönemi ve sonrasında Rotaract 2420 bünyesinde pekçok sosyal sorumluluk projesinde aktif olarak rol almıştır. Gerek dernek düzeyinde gerekse bölge düzeyinde saymanlık ve mali danışmanlık yapmış olan Onuralp'in dernekler ve vakıflar mevzuatı üzerine geniş tecrübesi olup bu konuda pek çok eğitim ve seminer vermiştir. Boğaziçi Üniversitesi Uluslararası İlişkiler Bölümü mezunu olup aynı üniversiteden MBA derecesi vardır.</p>
       <div class="p-other">
         <a href="http://www.linkedin.com/in/leventbas" target="_blank" title="LinkedIn profilini görüntüle">
@@ -31,6 +31,9 @@
       </div>
     </div>
   </div><!-- end of .profile -->
+
+
+
 
 </div><!-- .team-profile -->
 
