--- a/app/views/projects/_list_projects.html.erb
+++ b/app/views/projects/_list_projects.html.erb
@@ -1,7 +1,7 @@
 <div class="widget widget-light widget-kurum ">
   <div class="w-inner clearfix">
     <div class="w-content">
-      <div class="w-title">Destekleyebileceğiniz Projeler</div>
+      <div class="w-title">Destekleyebileceğiniz projeler</div>
       <div class="rows-container" id="donation-pages-container">
         <%
         org_ids = []
@@ -30,12 +30,12 @@
         <% end %>
       </div>
       <% if (defined?(organization) && current_user == organization.user) %>
-        <div class="row-action">
+        <div class="row row-action">
           <%= link_to 'Yeni bağış projesi oluştur!', new_project_for_organization_path(organization), :class=>"green button super" %>
         </div>
       <% elsif defined?(link_to_organizations) && link_to_organizations == true %>
-        <div class="row-action">
-          <%= link_to 'Tüm Kurumlar', all_organizations_path, :class=>"green button super" %>
+        <div class="row row-action">
+          <%= link_to 'Tüm projeleri görüntüle', all_organizations_path, :class=>"show-all" %>
         </div>
       <% end %>
 
