--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -5,9 +5,10 @@
         <input type="text"  name="k" id="search_query" value="<%=@keyword%>">
       </form>
       <hr/>
+
       <div id="facet_renderer" class="search-div">
       </div>
-      <div id="search_renderer" class="search-div">
+      <div id="search_renderer" class="search-div rows-container">
       </div>
 
     </div>
@@ -30,7 +31,7 @@ $(document).ready(function(){
     $("#search_form").bvSearchAutocomplete({
       renderer : $("#search_renderer"),
       format : function(item) {
-        return $.tmpl("<p><a href='/ara/d/${docid}'><img src='${logo}'> ${human_readable_name}</a><br/>${description}</p><hr/>", item);
+        return $.tmpl("<div class='row clearfix'><div class='row-photo clearfix'><a href='/ara/d/${docid}'><img src='${logo}'></a></div><div class='row-details'><h3><a href='/ara/d/${docid}'>${human_readable_name}</a></h3><p>${description}</p></div></div>", item);
       },
       facetRenderer : $("#facet_renderer"),
       facetFormat : function(facet) {
@@ -43,5 +44,3 @@ $(document).ready(function(){
 </script>
 <% end %>
 <%render_at_the_end captured%>
-
-
