--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -143,7 +143,7 @@
             <ul>
               <li><%=link_to "İletişim", :new_contact_form %></li>
               <li><a href="http://blog.benvarim.com/">Blog</a></li>
-              <li>Basın Bültenleri</li>
+              <!-- <li>Basın Bültenleri</li> -->
               <li><%=link_to "Yeni Kurum Kaydı", :new_organization %></li>
             </ul>
           </div>
