fixes search results page.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -83,7 +83,7 @@
         <div id="utility-nav" class="rc-bottom">
           <div class="un-search">
             <form id="un-search-form" action="/ara/">
-              <input type="text" class="rc" name="k" id="search_query" value="<%=@keyword%>">
+              <input type="text" class="rc" name="k" id="search_query" value="<%=@keyword%>" placeholder="Kurum, proje, bağış sayfası ya da kişi ara...">
             </form>
           </div>
           <div class="un-login-registration">
