--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -27,7 +27,8 @@ $(document).ready(function(){
     $("#search_form").bvSearchAutocomplete({
       renderer : $("#search_renderer"),
       format : function(item) {
-        return $.tmpl("<div class='row clearfix'><div class='row-photo clearfix'><a href='/ara/d/${docid}'><img src='${logo}'></a></div><div class='row-details'><h3><a href='/ara/d/${docid}'>${human_readable_name}</a></h3><p>${description}</p></div></div>", item);
+        var tmpl_string = "<div class='row clearfix'><div class='row-photo clearfix'><a href='/ara/d/${docid}'><img src='${logo}' /></a></div><div class='row-details'><h3><a href='/ara/d/${docid}'>${human_readable_name}</a></h3><p>${description}</p></div></div>";
+        return $.tmpl(tmpl_string, item);
       },
       facetRenderer : $("#facet_renderer"),
       facetFormat : function(facet) {
