--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -729,8 +729,8 @@ p{
   background: #ecf5ff url('../images/v2/search-icon.png') no-repeat 250px 2px;
 }
 
-.search-loading  .un-search input{
-  background: #ecf5ff url('images/search-loading.gif') no-repeat 250px 2px;
+.search-loading  input{
+  background: #ecf5ff url('../images/search-loading.gif') no-repeat 250px 4px;
 
 }
 
