--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -726,7 +726,7 @@ p{
   font-size: 12px;
   padding-right: 30px;
   width: 240px;
-  background: #ecf5ff url('/stylesheets/images/v2/search-icon.png') no-repeat 250px 2px;
+  background: #ecf5ff url('/images/v2/search-icon.png') no-repeat 250px 2px;
 }
 
 
@@ -737,7 +737,7 @@ p{
 
 .un-search input:focus,
 .un-search input:active{
-  background: #FFF url('../images/v2/search-icon.png') no-repeat 250px 2px;
+  background: #FFF url('/images/v2/search-icon.png') no-repeat 250px 2px;
 }
 
 .search-loading  input,
